Fix x overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@ a {
 body {
   width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 h1,
